css.css
* {
    font-family: Arial;
}

body {
    background-color: lightblue;
}

img {
    width: 200px;
    height: 200px;
}

#box {
    align-items: center;
}

.child {
    margin: 0 auto;
}

